--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
 <!-- MOBILE MENU -->
 
-      <div class="mobile-menu-wrapper is-open">
+      <div class="mobile-menu-wrapper">
         <div class="container mobile-menu-container">
           <button type="button" class="mobile-menu-close-btn">
           <svg
