--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             viewBox="0 0 32 32"
             aria-label="mobil menu open icon"
           >
-            <use href="../images/icons.svg#icon-burger"></use>
+            <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
